--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,17 +1,59 @@
+/* Geral */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+body>header{
+    width: 100%;
+    height: 60px;
+    background: #0C0F11;
+    display: flex;
+    gap: 25px;
+    align-items: center;
+    padding-left: 18%;
+}
+
+/* Cabeçalho */
+.menu{
+    align-items: center;
+    display: flex;
+    gap: 20px;
+}
+.logo img{
+    height: 50px;
+}
+.menu a:link, menu a:visited{
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
 /* Banner principal */
-.principal{
-    
+.principal {
+    display: flex;
+    flex-direction: column;
 }
-.conteudoPrincipal{
+
+.conteudoPrincipal {
     width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    align-items: center;
 }
-.textoPrincipal{
-    color: blue;
+
+.textoPrincipal {
+    color: #fff;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 15px;
 }
-.btnPrincipal{
+
+.btnPrincipal {
     color: #fff;
     text-transform: uppercase;
     font-weight: bold;
