--- a/css/rodape.css
+++ b/css/rodape.css
@@ -19,6 +19,10 @@
     align-items: first baseline;
 }
 
+.rodapeSocial__Contato li{
+    list-style-type: none;
+
+}
 .rodape__midia {
     display: block;
     width: 42px;
@@ -28,5 +32,41 @@
 
 .rodape__Assuntos{
     display: flex;
+}
+
+.rodape__Assuntos__links{
     text-decoration: none;
+    list-style-type: none;
+
+}
+
+.rodape__Assuntos__links li {
+    list-style-type: none;
+  }
+
+.rodape__Img{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.rodape__Img__itens{
+    /* padding: 30px; */
+    /* margin-right: 30px;  */
+}
+.rodape__PoliticaDoSite{
+    background-color: #1f2026;
+    display: flex;
+    width: 100%;
+}
+
+.rodape__PoliticaDoSite__Links{
+    color: #fff;
+    margin: 1.5rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.copyright{
+    text-transform: uppercase;
 }
