💄 Add or update the UI and style files

--- a/css/principal.css
+++ b/css/principal.css
@@ -14,6 +14,10 @@
     align-items: center;
 }
 
+.conteudoPrincipal img{
+    align-content: flex-end;
+}
+
 .textoPrincipal {
     color: #fff;
     text-transform: uppercase;
