--- a/css/nossosJogos.css
+++ b/css/nossosJogos.css
@@ -3,14 +3,18 @@
 .secaoNossosJogos{
     width: 100%;
     background-image: url('../img/bg-nossos-jogos.jpg');
+    /* margin-bottom: 8rem; */
+    padding: 8rem;
 }
 .secaoNossosJogosTitulo{
     text-align: center;
+    text-transform: uppercase;
+    padding: 5rem;
 }
 .secaoNossosJogosArtigos{
-    width: 100%;
     display: flex;
     justify-content: space-around;
+    width: 100%;
 }
 .secaoNossosJogosArtigos__Artigo{
     width: 300px;
@@ -19,4 +23,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 1.5rem;
+}
+
+.secaoNossosJogosArtigos__Artigo h2{
+    padding: 1.5rem;
+}
+
+.secaoNossosJogosArtigos__Artigo p{
+    padding: 1.5rem;
+    text-align: center;
+
+}
+
+.secaoNossosJogosArtigos__Artigo a{
+    text-decoration: none;
+    color: #d5150b;
+    font-weight: bold;
 }
