--- a/css/rodape.css
+++ b/css/rodape.css
@@ -51,7 +51,7 @@
 }
 
 .rodape__Img__itens{
-    /* padding: 30px; */
+    padding: 30px;
     /* margin-right: 30px;  */
 }
 .rodape__PoliticaDoSite{
