--- a/css/principal.css
+++ b/css/principal.css
@@ -3,36 +3,33 @@
 .principal {
     display: flex;
     flex-direction: column;
+    
 }
 
 .conteudoPrincipal {
-    width: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    position: absolute;
+    position: relative;
     align-items: center;
-}
-
-.conteudoPrincipal img{
-    align-content: flex-end;
+    top: -350px;
+    right: -100px;
+    width: 35rem;
 }
 
 .textoPrincipal {
-    color: #fff;
+    color: red;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 15px;
 }
 
 .btnPrincipal {
-    color: #fff;
+    padding: 15px 40px;
+    color: #ffffff;
     text-transform: uppercase;
     font-weight: bold;
     background-color: #C86C2D;
-    margin-top: 20px;
     text-decoration: none;
-    /* preencimento: 15px */
-    border: solid 2px #fff;
+    border: 1px solid #ffffff;
     border-radius: 5px;
 }
