--- a/css/principal.css
+++ b/css/principal.css
@@ -1,8 +1,11 @@
 
 /* Banner principal */
 .principal {
+    background-image: url('../img/banner-principal.jpg');
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
+    height: 40rem;
     
 }
 
@@ -11,20 +14,21 @@
     flex-direction: column;
     position: relative;
     align-items: center;
-    top: -350px;
-    right: -100px;
+    top: 280px;
+    right: -180px;
     width: 35rem;
 }
 
 .textoPrincipal {
-    color: red;
+    color: #ffffff;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 15px;
+    margin: 15px;
 }
 
 .btnPrincipal {
     padding: 15px 40px;
+    /* margin-top: 1rem; */
     color: #ffffff;
     text-transform: uppercase;
     font-weight: bold;
